Added outline content

--- a/resume_excercise/index.html
+++ b/resume_excercise/index.html
@@ -6,14 +6,70 @@
   </head>
   <body>
     <div id="main_container">
-      <div id="section_1">
-        <div id="image_name_info">
-          <div id="image"><img src="jake.jpg" width="100" height="100"</div>
-          <div id="name"></div>
-          <div id="general_information"></div>
+      <div
+        id="section_1"
+        style="background-color: peachpuff; width: 80%; margin-left: 10%"
+      >
+        <div id="image_name_info" style="display: inline-flex">
+          <div id="image">
+            <img src="jake.jpg" width="200" height="200" />
+          </div>
+          <div id="name">
+            <h1>Jake Stucky</h1>
+            <h3>Software Developer</h3>
+          </div>
+          <div id="general_information">
+            <table>
+              <tr>
+                <td>Name</td>
+                <td>Jake Stucky</td>
+              </tr>
+              <tr>
+                <td>Date of Birth</td>
+                <td>1/1/1901</td>
+              </tr>
+              <tr>
+                <td>Address</td>
+                <td>
+                  2121 nowhere rd
+                  <br />
+                  Area 51, NM
+                </td>
+              </tr>
+              <tr>
+                <td>Phone</td>
+                <td>555-123-2021</td>
+              </tr>
+              <tr>
+                <td>Email</td>
+                <td>
+                  <a href="mailto:NoSpam@Thanks.com">NoSpam@Thanks.com</a>
+                </td>
+              </tr>
+              <tr>
+                <td>Website</td>
+                <td>
+                  <a href="http://www.jakestucky.com" target="_blank"
+                    >www.jakestucky.com</a
+                  >
+                </td>
+              </tr>
+            </table>
+          </div>
         </div>
-        <div id="bio"></div>
+        <div id="bio">
+          Bacon ipsum dolor amet pork belly pig kielbasa, tenderloin chislic
+          andouille buffalo short loin sirloin jowl pork loin bresaola spare
+          ribs shankle hamburger. Sausage bresaola pork chop pork, chicken
+          corned beef salami burgdoggen porchetta chuck boudin landjaeger short
+          ribs swine. Chuck shank chicken strip steak spare ribs sausage
+          drumstick rump kevin brisket porchetta tri-tip jowl pork belly. Corned
+          beef t-bone turducken, ham beef ribs boudin short loin shoulder pork
+          loin. Beef ribs sirloin chuck tri-tip burgdoggen turkey beef pancetta
+          hamburger. Tri-tip frankfurter capicola jowl cupim.
+        </div>
       </div>
     </div>
+    <div id="resume_body"></div>
   </body>
 </html>
