added sample content

--- a/index.html
+++ b/index.html
@@ -2,44 +2,117 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Box Model</title>
+    <title>THE-STORMLIGHT-ARCHIVE</title>
+    <style>
+      img {
+        height: 400px;
+        width: 300px;
+        margin-left: 7%;
+      }
+      h1 {
+        text-align: center;
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+          "Lucida Sans", Arial, sans-serif;
+        font-size: 72px;
+      }
+      #quote {
+        text-align: center;
+        font-size: 26px;
+        text-decoration: none;
+      }
+      body {
+        background-color: peachpuff;
+      }
+      p {
+        font-size: 24px;
+      }
+      #description {
+        text-align: center;
+        width: 60%;
+        margin-left: 20%;
+      }
+      h3 {
+        font-size: 32px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Box Model Visual</h1>
-    <div
-      style="
-        width: 200px;
-        height: 300px;
-        background-color: red;
-        padding: 10px;
-        border: 2px solid green;
-        margin: 0;
-      "
-    >
-      <div
-        style="
-          width: 100px;
-          height: 100px;
-          background-color: blue;
+    <div>
+      <h1>The Stormlight Archive Series</h1>
+      <div id="book_photos">
+        <a
+          href="https://www.amazon.com/THE-STORMLIGHT-ARCHIVE/dp/B074CBP9DY"
+          target="_blank"
+          alt
+        >
+          <img src="Way-of-Kings.jpg" />
+          <img src="s238613979156165194_p2458_i1_w1564.jpeg" />
+          <img src="91x4fchgt2L.jpg " />
+          <img src="51mXkL4fXeL._SX327_BO1,204,203,200_.jpg" />
+        </a>
+        <p id="quote">
+          <em>
+            Speak again the ancient oaths:
 
-          border: 2px solid white;
-          margin-left: 5%;
-          margin-top: 40%;
-        "
-      >
-        Inner Div
+            <b>
+              Life before death. Strength before weakness. Journey before
+              Destination.
+            </b>
+
+            and return to men the Shards they once bore.
+            <br />
+            The Knights Radiant must stand again.</em
+          >
+        </p>
       </div>
-      <div
-        style="
-          width: 100px;
-          height: 100px;
-          border: 2px solid peachpuff;
-          background-color: peachpuff;
-          margin-left: 5%;
-          margin-top: 5%;
-        "
-      >
-        Inner Div 2
+      <hr />
+      <div id="description">
+        <h3>
+          The Stormlight Archive (4 book series) Kindle Edition by Brandon
+          Sanderson (Author) From Book 1: From #1 New York Times bestselling
+          author Brandon Sanderson, The Way of Kings, Book One of the Stormlight
+          Archive begins an incredible new saga of epic proportion.
+        </h3>
+        <p>
+          Roshar is a world of stone and storms. Uncanny tempests of incredible
+          power sweep across the rocky terrain so frequently that they have
+          shaped ecology and civilization alike. Animals hide in shells, trees
+          pull in branches, and grass retracts into the soilless ground. Cities
+          are built only where the topography offers shelter.
+        </p>
+        <p>
+          It has been centuries since the fall of the ten consecrated orders
+          known as the Knights Radiant, but their Shardblades and Shardplate
+          remain: mystical swords and suits of armor that transform ordinary men
+          into near-invincible warriors. Men trade kingdoms for Shardblades.
+          Wars were fought for them, and won by them.
+        </p>
+        <p>
+          One such war rages on a ruined landscape called the Shattered Plains.
+          There, Kaladin, who traded his medical apprenticeship for a spear to
+          protect his little brother, has been reduced to slavery. In a war that
+          makes no sense, where ten armies fight separately against a single
+          foe, he struggles to save his men and to fathom the leaders who
+          consider them expendable.
+        </p>
+        <p>
+          Brightlord Dalinar Kholin commands one of those other armies. Like his
+          brother, the late king, he is fascinated by an ancient text called The
+          Way of Kings. Troubled by over-powering visions of ancient times and
+          the Knights Radiant, he has begun to doubt his own sanity.
+        </p>
+        <p>
+          Across the ocean, an untried young woman named Shallan seeks to train
+          under an eminent scholar and notorious heretic, Dalinar's niece,
+          Jasnah. Though she genuinely loves learning, Shallan's motives are
+          less than pure. As she plans a daring theft, her research for Jasnah
+          hints at secrets of the Knights Radiant and the true cause of the war.
+        </p>
+        <p>
+          The result of over ten years of planning, writing, and world-building,
+          The Way of Kings is but the opening movement of the Stormlight
+          Archive, a bold masterpiece in the making.
+        </p>
       </div>
     </div>
   </body>
